v.1.1.0 - 1.16.2 update + content additions!

WARNING: This update deletes all existing gear items! 
Unfortunately required because of the gear rework.
A clean start is recommended.

Also, update your library of exile.

This update is actually a combination of a few big updates:
- Crafting update
- Mob Update
- Area Update

CRAFTING UPDATE:

All gears now have level ranges, so Old Boots would be lvl 0-10, but Royal boots lvl 40-50.
Each level range has its own material. You can now craft nearly all the gear of any level!
(exception are bows, crossbows and shields, sorry still waiting for fabric api to get those to work)

All gears are crafted with special ores, except cloth and leather armor, which use cloth and leather materials.

Some gears are special, and need a certain Essence to craft. Like to craft a Frost resistance ring, you need Essence of Water alongside the ores.

For a Healing Scepter, you need to fill the crafting grid with Essence of Life, etc.

Crafted items have a small chance to become unique too.
The only thing crafting items like this assures you is their level range and the gear type. 
So you can craft a lvl 10-20 Sword. But you can't be sure what rarity, affixes etc it will have.
Level is capped to player level, so if you craft a piece of gear, it will never go above your level to make sure you can use it. -
(Note, this is within the gear's level range, so Player lvl 25, you craft a lvl 40-50 sword, you'll get a lvl 40 sword.)

All recipes use a very predictable system, so if you can figure out how to craft 1 wand, you'll know how to craft them all.
The only confusion might be rings and necklaces. They only have 2 level ranges, 0-20 and 20-50. So only 2 crafting recipes.

The material needed for the item is based on highest level the item can have.

MOB UPDATE:

I added many new elemental or special mobs to the game.
These mobs spawn during daytime too :) (after a certain level, i set default to 10 so newbies have time to prepare)