@@ -1,0 +1,5 @@
+package com.robertx22.age_of_exile.database.registrators;
+
+public class FoodEffects {
+
+}
