@@ -1,0 +1,7 @@
+package com.robertx22.age_of_exile.datapacks.bases;
+
+import com.google.gson.Gson;
+
+public class MyGSON {
+    public static Gson GSON = new Gson();
+}
