@@ -13,7 +13,7 @@
       "item": "minecraft:crafting_table"
     } , 
 	"B": {
-      "item": "minecraft:diamond"
+      "item": "minecraft:gold_ingot"
     } 
   },
   "result": {
